opam-version: "2.0"
version: "dev"
authors: ["Simon Cruanes" "Guillaume Bury"]
synopsis: "Tool to run one or more logic programs, on a set of files, and collect the results"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  "dune" { >= "1.1" }
  "benchpress" { = version }
  "containers" { >= "2.7" }
  "sqlite3"
  "sqlite3_utils" { >= "0.3" & < "0.4" }
  "lablgtk3" { >= "3.0" }
  "ocaml" {>= "4.03" }
]
homepage: "https://github.com/sneeuwballen/benchpress/"
dev-repo: "git+https://github.com/sneeuwballen/benchpress.git"
bug-reports: "https://github.com/sneeuwballen/benchpress/issues"
