opam-version: "2.0"
version: "dev"
authors: ["Simon Cruanes" "Guillaume Bury"]
synopsis: "Server and web UI for benchpress"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  "dune" { >= "1.1" }
  "base-unix"
  "containers" { >= "2.7" }
  "csv"
  "benchpress" { = version }
  "cmdliner"
  "logs"
  "uuidm"
  "base64"
  "gnuplot" { >= "0.6" & < "0.8" }
  "sqlite3"
  "sqlite3_utils" { >= "0.3" & < "0.4" }
  "tiny_httpd" { >= "0.6" & < "0.7" }
  "tiny_httpd_camlzip" { >= "0.5" }
  "printbox" { >= "0.5" & < "0.6" }
  "tyxml"  # for printbox.tyxml
  "ocaml" {>= "4.03" }
]
pin-depends: [
  ["tiny_httpd.0.6" "git+https://github.com/c-cube/tiny_httpd.git#master"]
  ["tiny_httpd_camlzip.0.6" "git+https://github.com/c-cube/tiny_httpd.git#master"]
]
homepage: "https://github.com/sneeuwballen/benchpress/"
dev-repo: "git+https://github.com/sneeuwballen/benchpress.git"
bug-reports: "https://github.com/sneeuwballen/benchpress/issues"
