opam-version: "2.0"
version: "0.1"
license: "BSD-2-Clause"
authors: ["Simon Cruanes" "Guillaume Bury"]
synopsis: "Server and web UI for benchpress"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  "dune" { >= "1.11" }
  "base-unix"
  "containers" { >= "3.0" & < "4.0" }
  "csv"
  "benchpress" { = version }
  "cmdliner" {>= "1.1.0"}
  "logs"
  "uuidm"
  "base64"
  "gnuplot" { >= "0.6" & < "0.8" }
  "sqlite3"
  "sqlite3_utils" { >= "0.4" & < "0.5" }
  "tiny_httpd" { >= "0.17" & < "1.0" }
  "printbox" { >= "0.6" }
  "printbox-text" { >= "0.6" }
  "ocaml" {>= "4.12" }
  "jemalloc" { >= "0.2" & < "0.3" }
]
homepage: "https://github.com/sneeuwballen/benchpress/"
dev-repo: "git+https://github.com/sneeuwballen/benchpress.git"
bug-reports: "https://github.com/sneeuwballen/benchpress/issues"
