opam-version: "2.0"
version: "dev"
authors: ["Simon Cruanes" "Guillaume Bury"]
synopsis: "Tool to run one or more logic programs, on a set of files, and collect the results"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  "dune" { >= "1.1" }
  "base-unix"
  "containers" { >= "2.7" }
  "re" { >= "1.8" & < "2.0" }
  "csv"
  "cmdliner"
  "iter" { >= "1.0" } # TODO: remove
  "logs"
  "uuidm"
  "base64"
  "gnuplot" { >= "0.6" & < "0.8" }
  "sqlite3"
  "sqlite3_utils" { >= "0.3" & < "0.4" }
  "tiny_httpd" { >= "0.4" & < "0.6" }
  "printbox" { >= "0.5" & < "0.6" }
  "tyxml"  # for printbox.tyxml
  "decoders" { >= "0.3.0" & < "0.4" }
  "decoders-yojson" { >= "0.3.0" & < "0.4" }
  "ocaml" {>= "4.02" }
]
homepage: "https://github.com/sneeuwballen/benchpress/"
dev-repo: "git+https://github.com/sneeuwballen/benchpress.git"
bug-reports: "https://github.com/sneeuwballen/benchpress/issues"
