opam-version: "2.0"
version: "0.1"
authors: ["Simon Cruanes" "Guillaume Bury"]
synopsis: "Tool to run one or more logic programs, on a set of files, and collect the results"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" { >= "2.2" }
  "base-unix"
  "containers" { >= "3.3" & < "4.0" }
  "containers-thread" { >= "3.0" & < "4.0" }
  "re" { >= "1.8" & < "2.0" }
  "csv"
  "cmdliner" {>= "1.1.0"}
  "iter" { >= "1.0" } # TODO: remove
  "logs"
  "uuidm"
  "base64"
  "ptime"
  "pp_loc" { >= "2.0" & < "3.0" }
  "gnuplot" { >= "0.6" & < "0.8" }
  "sqlite3"
  "sqlite3_utils" { >= "0.4" & < "0.6" }
  "printbox" { >= "0.6" }
  "printbox-text" { >= "0.6" }
  "ocaml" {>= "4.08" }
]
homepage: "https://github.com/sneeuwballen/benchpress/"
dev-repo: "git+https://github.com/sneeuwballen/benchpress.git"
bug-reports: "https://github.com/sneeuwballen/benchpress/issues"
