opam-version: "1.2"
name: "nunchaku"
version: "dev"
authors: ["Simon Cruanes" "Guillaume Bury"]
maintainer: "simon.cruanes@inria.fr"
build: [
    [make "build"]
    ["jbuilder" "build" "@install"]
]
install: [
    ["jbuilder" "install"]
]
build-doc: [ make "doc" ]
build-test: [ make "test" ]
remove: [
    ["ocamlfind" "remove" "nunchaku"]
]
depends: [
    "ocamlfind" {build}
    "jbuilder" {build}
    "base-unix"
    "containers" { >= "1.0" }
    "re"
    "junit"
    "toml"
    "olinq"
    "csv"
    "cmdliner"
    "irc-client" { >= "0.6" }
    "irc-client-unix"
]
homepage: "https://github.com/nunchaku-inria/logitest/"
available: [ocaml-version >= "4.01.0"]
dev-repo: "https://github.com/nunchaku-inria/logitest.git"
bug-reports: "https://github.com/nunchaku-inria/logitest/issues"
