opam-version: "2.0"
name: "logitest"
version: "dev"
authors: ["Simon Cruanes" "Guillaume Bury"]
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
    "dune" {build}
    "base-unix"
    "containers" { >= "1.0" }
    "re"
    "junit"
    "toml"
    "olinq"
    "csv"
    "cmdliner"
    "irc-client" { >= "0.6" }
    "irc-client-unix"
    "ocaml" {>= "4.02" }
]
homepage: "https://github.com/nunchaku-inria/logitest/"
dev-repo: "git+https://github.com/nunchaku-inria/logitest.git"
bug-reports: "https://github.com/nunchaku-inria/logitest/issues"
