opam-version: "2.0"
name: "logitest"
version: "dev"
authors: ["Simon Cruanes" "Guillaume Bury"]
synopsis: "Tool to run one or more logic programs, on a set of files, and collect the results"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
    "dune" { >= "1.1" & < "2.0" }
    "base-unix"
    "containers" { >= "1.0" }
    "re" { >= "1.8" & < "2.0" }
    "toml"
    "olinq"
    "csv"
    "cmdliner"
    "iter" { >= "1.0" }
    "uuidm"
    "tiny_httpd" { >= "0.2" & < "0.3" }
    "printbox" { >= "0.3" & < "0.4" }
    "tyxml"  # for printbox.tyxml
    "decoders" { >= "0.3.0" & < "0.4" }
    "decoders-yojson" { >= "0.3.0" & < "0.4" }
    "ocaml" {>= "4.02" }
]
homepage: "https://github.com/nunchaku-inria/logitest/"
dev-repo: "git+https://github.com/nunchaku-inria/logitest.git"
bug-reports: "https://github.com/nunchaku-inria/logitest/issues"
