(rule
 (alias lint)
 (mode promote)
 (enabled_if %{env:FORCE_GENPROTO=false})
 (targets benchpress_proto.ml benchpress_proto.mli)
 (deps benchpress_proto.proto)
 (action
  (run
   ocaml-protoc
   --binary
   --yojson
   --services
   --pp
   --make
   --ml_out
   .
   %{deps})))

(library
 (name benchpress_proto)
 (public_name benchpress-proto)
 (libraries pbrt pbrt_services pbrt_yojson yojson))
