(executable
 (name cleanup)
 (libraries containers)
 (flags :standard -warn-error -a+8))

(rule
 (targets fake_yaml.out)
 (deps
  (source_tree .))
 (action
  (with-stdout-to
   %{targets}
   (bash
    "../src/bin/benchpress_bin.exe run --save=false -q -c conf_prover1.yaml --task runall | sed -E '/^total_time/s/[0-9.]+s/--s/'"))))

(rule
 (alias runtest)
 (package benchpress)
 (action
  (diff fake_yaml.expected fake_yaml.out)))
