(library
 (name benchpress)
 (public_name benchpress)
 (modes native)
 (synopsis
  "Benchpress core library, with all the data structures and functions")
 (wrapped true)
 (libraries
  containers
  containers.unix
  eio
  eio.unix
  re
  re.perl
  csv
  iter
  printbox
  printbox-text
  logs
  logs.cli
  ptime
  ptime.clock.os
  uuidm
  sqlite3
  sqlite3_utils
  cmdliner
  pp_loc
  processor
  trace.core
  yojson
  ezlua
  ocaml-lua)
 (flags :standard -w -5 -warn-error -a+8 -strict-sequence))

(rule
 (targets builtin_config.ml)
 (deps builtin_config.lua)
 (action
  (with-stdout-to
   %{targets}
   (progn
    (echo "let config = {lua|")
    (cat %{deps})
    (echo "|lua} ;;")))))
