(library
 (name benchpress)
 (public_name benchpress)
 (modes native)
 (synopsis
  "Benchpress core library, with all the data structures and functions")
 (wrapped true)
 (libraries
  benchpress_api_proto
  containers
  containers.unix
  eio
  eio.unix
  re
  re.perl
  csv
  iter
  printbox
  printbox-text
  logs
  logs.cli
  ptime
  ptime.clock.os
  uuidm
  sqlite3
  sqlite3_utils
  cmdliner
  processor
  trace.core
  yojson
  jsonm
  yaml)
 (flags :standard -w -5 -warn-error -a+8 -strict-sequence))

(rule
 (targets static_data.ml)
 (deps
  (:builtin builtin_config.yaml)
  (:example example_config.yaml))
 (action
  (with-stdout-to
   %{targets}
   (progn
    (echo "let builtin_config = {yaml|")
    (cat %{builtin})
    (echo "|yaml} ;;")
    (echo "let example_config = {yaml|")
    (cat %{example})
    (echo "|yaml} ;;")))))
