(executable
 (name benchpressctl)
 (public_name benchpressctl)
 (package benchpressctl)
 (modes native)
 (libraries
  benchpress_nats
  benchpress_api_proto
  cmdliner
  curly
  eio
  eio.unix
  eio_main
  logs
  twirp_core)
 (preprocess
  (pps ppx_subliner))
 (flags :standard -warn-error -a+8 -safe-string))
